--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,7 @@
 
 body {
   font-family: gt-super, Georgia, Cambria, "Times New Roman", Times, serif;
-  overflow-y: scroll;
+  overflow-y: auto;
   background: #f7f4ed;
 }
 
